[tool.poetry]
name = "applied-programming"
version = "0.1.0"
description = ""
authors = ["themaximkol <maxym.vasin@gmail.com>"]
readme = "README.md"
packages = [{include = "applied_programming"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

